# maze-playground

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build-and-release.bash  build.bash  build.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  rendering-playground.html  tsconfig.json  turbo.json  vite.config.mts  vite.config.ts  web.Dockerfile
.github/workflows/: release.yml
computer/: Cargo.toml
computer/src/: lib.rs  maze.rs
esbuild/: esbuild.go  go.mod  go.sum  main.go
public/: game-win-animations.css  game.css  game.html  index.html  manifest.json  rendering-playground.html  sw.js
src/: Global.d.ts  computer.ts  game.css  game.ts  lib.rs  main.rs  main.ts  manifest.json  maze.rs  putMazeInWebGpu.ts  putMazeInWebgl.ts  script.ts  sw.ts
src/game/: app.ts  offline.worker.ts
src/maze/: generators.rs  printers.rs
src/renderers/: bitmapRenderer.ts  image.ts  svg.ts  type.ts  webGL.ts  webGPU.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/www/: .gitignore  .prettierignore  bootstrap.js  build.bash  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
wasm/www/public/: compute-LATEST.wgsl  frag-LATEST.glsl  frag.glsl  identity.vert  index.html  maze.frag  maze.vert  script-LATEST.js  shader-LATEST.wgsl
wasm/www/src/: bootstrap.ts  index.ts  putMazeInWebGpu.ts  putMazeInWebgl.ts  putMazeInWebgpu.ts
www/: .gitignore  .prettierignore  build.bash  build.mjs  meta.json  package-lock.json  package.json  pnpm-lock.yaml
www/public/: index.html  (+1 more)
(+7 files in other folders)
