[package]
name = "maze-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false }
thiserror = "1.0.56"
rand_core = { version = "0.6.4", features = ["alloc"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
