[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
maze-playground = {path = ".."}
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "rlib"]

