[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze-playground = {path = ".."}
rand = { version = "0.8.5", default-features = false }
rand_core = { version = "0.6.4", features = ["alloc"] }

[lib]
crate-type = ["cdylib", "rlib"]

